Picrures added, format improved.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
 
 
  </ul>
+ <section id="img-group">
+  <div class="row">
+  <div class="column">  
+ <img src="images/hohensalzburg.png" alt="Photo of Hohensalzburg Fortress in Salzburg, Austria" width="25%">
+  </div>
+  <div class="column">
  <img src="images/birthplacemozart.png" alt="Closeup picture of a music book, with the text birthplace of Mozart." width="25%">
+</div>
+<div class="column">
+    <img src="images/romeofthenorth.png" alt="Photo of a skyline in Salzburg." width="25%">
+</div>
+  </div>
+</section>
 
     </main>
 
@@ -32,7 +44,7 @@
         <div class="btn-group">
             <button class="button button1" onclick="window.location.href = 'index.html'">Home</button>
             <button class="button button2" onclick="window.location.href = 'thingstodo.html'">Things to do</button>
-            <button class="button button3" onclick="window.location.href = 'about.html'">About</button>
+            <button class="button button3" onclick="window.location.href = 'contactus.html'">Contact us</button>
         </div> 
 
     </footer>
