--- a/thingstodo.html
+++ b/thingstodo.html
@@ -23,7 +23,7 @@
         <div class="btn-group">
             <button class="button button1" onclick="window.location.href = 'index.html'">Home</button>
             <button class="button button2" onclick="window.location.href = 'mt-todo.html'">Things to do</button>
-            <button class="button button3" onclick="window.location.href = 'about.html'">About</button>
+            <button class="button button3" onclick="window.location.href = 'contactus.html'">Contact us</button>
         </div> 
 
     </footer>
