Further built site structure and content.

--- a/thingstodo.html
+++ b/thingstodo.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-    <div class="page-title">Top Attractions In Salzburg</div>
+    <div class="page-title">Events In Salzburg</div>
     
     </header>
 
     <main>
-
+<img class="wt" src="images/WalkingTour.png" alt="Promotional image for the social event walking tour and beer garden, features a photo of people walking down a street.">
     </main>
 
 
@@ -22,9 +22,9 @@
     
         <div class="btn-group">
             <button class="button button1" onclick="window.location.href = 'index.html'">Home</button>
-            <button class="button button2" onclick="window.location.href = 'mt-todo.html'">Things to do</button>
+            <button class="button button2" onclick="window.location.href = 'thingstodo.html'">Things to do</button>
             <button class="button button3" onclick="window.location.href = 'contactus.html'">Contact us</button>
-        </div> 
+        </div>  
 
     </footer>
 </body>
