--- a/contactus.html
+++ b/contactus.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-
+    <div class="page-title">Contact Us</div>
 
 </header>
 
@@ -24,7 +24,8 @@
         <button class="button button1" onclick="window.location.href = 'index.html'">Home</button>
         <button class="button button2" onclick="window.location.href = 'thingstodo.html'">Things to do</button>
         <button class="button button3" onclick="window.location.href = 'contactus.html'">Contact us</button>
-    </div> 
+        
+       </div> 
 
 </footer>
 </body>
