Finalized website structure.

--- a/contactus.html
+++ b/contactus.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/images.css" />
+    
+
     <script src="scripts.js"></script>
 </head>
 <body>
@@ -15,8 +18,15 @@
 
     
     <main>
+<p class="subhead"> If you have any questions or concerns you can reach out to the conference's Marketing Manager Steven Kell.</p>
 
-    </main>
+<img class="selfie" src="images/bafkreicbxpn3xhz2gamhkj4zygxuo3sn7vuydjlq7g7ttskjyl2wri7sza.jpg" alt="Headshot of Steven Kell">
+<div class="contact-links"> 
+<img class="logo-pic" src="images/email-logo-png-30.png" alt="">    <a href="mailto:steventkell@gmail.com">Email me</a><br><br>
+<img class="logo-pic" src="images/linkedIn_PNG8.png" alt=""> <a href="https://www.linkedin.com/in/steven-kell/">linkedin</a><br><br>
+<img class="logo-pic" src="images/github_PNG68.png" alt=""><a href="https://github.com/StevenKell">Github</a><br><br>
+</div>
+</main></body>
 
 
 <footer>
