--- a/thingstodo.html
+++ b/thingstodo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/images.css" />
 
     <title>Things To Do</title>
 </head>
@@ -14,7 +15,13 @@
     </header>
 
     <main>
-<img class="wt" src="images/WalkingTour.png" alt="Promotional image for the social event walking tour and beer garden, features a photo of people walking down a street.">
+        <div class="flex-container">
+        <event-image-container class="flex-container">
+            <div><img class="box" src="images/WalkingTour.png" alt="Promotional image for the social event walking tour and beer garden, features a photo of people walking down a street."></div>
+            <div><img class="box" src="images/Concert.png" alt="Photo of hands playing a piano."></div>
+            <div><img class="box" src="images/RLadiesLunch.png" alt="Photo of a group of people eating"></div>
+        </event-image-container>
+    </div>  
     </main>
 
 
